--- a/landing_page.html
+++ b/landing_page.html
@@ -2317,7 +2317,7 @@
                 - Basin (https://usebasin.com)
                 -->
 
-                <form class="signup-form" id="signupForm" action="YOUR_FORMSPREE_ENDPOINT" method="POST">
+                <form class="signup-form" id="signupForm" action="https://formspree.io/f/mjgbvrlb" method="POST">
                     <div class="form-row">
                         <div class="form-group">
                             <label for="name">Name *</label>
