--- a/landing_page.html
+++ b/landing_page.html
@@ -1591,7 +1591,7 @@
     <section class="demo-video" id="demo">
         <div class="container">
             <div class="section-header">
-                <h2>See FlipIQ in Action</h2>
+                <h2>[COMING SOON] See FlipIQ in Action</h2>
                 <p>Watch how our AI agents find opportunities while you sleep</p>
             </div>
             <div class="demo-video-container">
