--- a/landing_page.html
+++ b/landing_page.html
@@ -1627,19 +1627,6 @@
         </div>
     </section>
 
-    <!-- Social Proof -->
-    <section class="social-proof">
-        <div class="container">
-            <p>Built for Flippers, by Investors</p>
-            <div class="logos">
-                <span>BiggerPockets</span>
-                <span>REI Nation</span>
-                <span>Flip Talk</span>
-                <span>CRE Daily</span>
-            </div>
-        </div>
-    </section>
-
     <!-- Problem -->
     <section class="problem">
         <div class="container">
@@ -1671,7 +1658,7 @@
     <section class="use-cases" id="use-cases">
         <div class="container">
             <div class="section-header">
-                <h2>Real Results from Real Flippers</h2>
+                <h2>Real Results from Real Flippers [beta]</h2>
                 <p>See how FlipIQ transforms the way investors find opportunities</p>
             </div>
             <div class="use-cases-grid">
