--- a/landing_page.html
+++ b/landing_page.html
@@ -2238,7 +2238,7 @@
                         <i class="fas fa-chevron-down"></i>
                     </div>
                     <div class="faq-answer">
-                        <strong>Enterprise plan</strong> includes API access and custom integrations. We can connect with popular CRMs like Podio, REsimpli, and InvestorFuse. For Starter and Professional plans, you can export data to CSV and import manually. Full CRM integrations are on our roadmap for Q2 2025.
+                        <strong>Enterprise plan</strong> includes API access and custom integrations. We can connect with popular CRMs like Podio, REsimpli, and InvestorFuse. For Starter and Professional plans, you can export data to CSV and import manually. Full CRM integrations are on our roadmap for Q1 2026.
                     </div>
                 </div>
                 <div class="faq-item">
@@ -2450,7 +2450,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 FlipIQ, Inc. All rights reserved. Built by flippers, for flippers.</p>
+                <p>Built by flippers, for flippers.</p>
             </div>
         </div>
     </footer>
