--- a/landing_page.html
+++ b/landing_page.html
@@ -2218,7 +2218,7 @@
                         <i class="fas fa-chevron-down"></i>
                     </div>
                     <div class="faq-answer">
-                        Currently, FlipIQ analyzes Zillow’s monthly research data, with our AI agents recalculating all opportunity scores within <strong>24 hours<strong> of every release. This ensures you have the most accurate macro-market scores available.
+                        Currently, FlipIQ analyzes Zillow’s monthly research data, with our AI agents recalculating all opportunity scores within 24 hours of every release. This ensures you have the most accurate macro-market scores available.
 
                         <strong>The Road to Zero-Day:</strong> We are currently in development to integrate live MLS and deed-transfer feeds. Our goal is to move from monthly trends to <strong>Zero-Day Scoring,</strong> giving our users the ability to act on market shifts in real-time.
                     </div>
